syntax = "proto3";
package ShareRing.shareledger.electoralbk;

option go_package = "github.com/ShareRing/Shareledger/x/electoralbk/types";

// Msg defines the Msg service.
service Msg {
    rpc EnrollVoter(MsgEnrollVoter) returns(MsgEnrollVoterResponse);
	rpc RevokeVoter(MsgRevokeVoter) returns(MsgRevokeVoterResponse);
}

message MsgEnrollVoter {
	string approver = 1;
	string voter = 2;
}
message MsgEnrollVoterResponse{}

message MsgRevokeVoter {
	string approver = 1;
	string voter = 2;
}
message MsgRevokeVoterResponse{}

message Voter {
	string address = 1;
	string status = 2;
} 
